fw_cfg/iptables_bak/mete-iptables_20191212
# Generated by iptables-save v1.4.7 on Tue Jan 22 11:48:07 2019
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Jan 22 11:48:07 2019
# Generated by iptables-save v1.4.7 on Tue Jan 22 11:48:07 2019
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Tue Jan 22 11:48:07 2019
# Generated by iptables-save v1.4.7 on Tue Jan 22 11:48:07 2019
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -p udp -m udp --sport 123 -j ACCEPT 
-A INPUT -s 42.121.65.50/32 -p tcp -m tcp --sport 20 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 42.121.65.50/32 -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 42.121.65.50/32 -p tcp -m tcp --sport 1024:65535 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 182.254.227.250/32 -p tcp -m tcp --sport 20 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 182.254.227.250/32 -p tcp -m tcp --sport 21 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 182.254.227.250/32 -p tcp -m tcp --sport 1024:65535 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 20 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1024:65535 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -i eth1 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -i eth2 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT 
-A OUTPUT -d 42.121.65.50/32 -p tcp -m tcp --dport 20 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 42.121.65.50/32 -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 42.121.65.50/32 -p tcp -m tcp --dport 1024:65535 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 182.254.227.250/32 -p tcp -m tcp --dport 20 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 182.254.227.250/32 -p tcp -m tcp --dport 21 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -d 182.254.227.250/32 -p tcp -m tcp --dport 1024:65535 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 20 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 1024:65535 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth1 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth2 -m state --state NEW,ESTABLISHED -j ACCEPT 
COMMIT
# Completed on Tue Jan 22 11:48:07 2019
