fw_cfg/iptables_bak/scada-iptables_20191212
# Generated by iptables-save v1.4.7 on Sat Aug 10 13:18:21 2019
*nat
:PREROUTING ACCEPT [1010496:60615396]
:POSTROUTING ACCEPT [5826473:349342045]
:OUTPUT ACCEPT [5826479:349343345]
COMMIT
# Completed on Sat Aug 10 13:18:21 2019
# Generated by iptables-save v1.4.7 on Sat Aug 10 13:18:21 2019
*mangle
:PREROUTING ACCEPT [76995344:9504881048]
:INPUT ACCEPT [76992115:9504700338]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [127222750:17417265063]
:POSTROUTING ACCEPT [127220992:17417180279]
COMMIT
# Completed on Sat Aug 10 13:18:21 2019
# Generated by iptables-save v1.4.7 on Sat Aug 10 13:18:21 2019
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -s 100.110.120.20/32 -d 100.110.120.10/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.30/32 -d 100.110.120.10/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.40/32 -d 100.110.120.10/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.50/32 -d 100.110.120.10/32 -p tcp -m tcp --sport 8800 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.50/32 -d 100.110.120.10/32 -p tcp -m tcp --sport 8801 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.20/32 -d 100.110.120.10/32 -p tcp -m tcp --sport 9009 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.30/32 -d 100.110.120.10/32 -p tcp -m tcp --sport 9009 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.20/32 -d 100.110.120.10/32 -p tcp -m tcp --sport 9010 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.30/32 -d 100.110.120.10/32 -p tcp -m tcp --sport 9010 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.121.12/32 -d 192.168.121.11/32 -p tcp -m tcp --dport 2404 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.124.12/32 -d 192.168.124.11/32 -p tcp -m tcp --dport 2404 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.143.2/32 -d 192.168.143.1/32 -p tcp -m tcp --sport 502 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.143.3/32 -d 192.168.143.1/32 -p tcp -m tcp --sport 502 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.143.4/32 -d 192.168.143.1/32 -p tcp -m tcp --sport 502 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.144.2/32 -d 192.168.144.1/32 -p tcp -m tcp --sport 502 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.144.3/32 -d 192.168.144.1/32 -p tcp -m tcp --sport 502 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.144.4/32 -d 192.168.144.1/32 -p tcp -m tcp --sport 502 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.122.12/32 -d 192.168.122.11/32 -p tcp -m tcp --sport 502 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.123.12/32 -d 192.168.123.11/32 -p tcp -m tcp --sport 2404 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 198.122.98.95/32 -d 198.122.0.110/32 -p tcp -m tcp --sport 8800 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.121.12/32 -d 192.168.121.11/32 -p tcp -m tcp --dport 502 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A OUTPUT -s 100.110.120.10/32 -d 100.110.120.20/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.10/32 -d 100.110.120.30/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.10/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.10/32 -d 100.110.120.50/32 -p udp -j ACCEPT 
-A OUTPUT -s 100.110.120.10/32 -d 100.110.120.50/32 -p tcp -m tcp --dport 8800 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.10/32 -d 100.110.120.50/32 -p tcp -m tcp --dport 8801 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.10/32 -d 100.110.120.20/32 -p tcp -m tcp --dport 9009 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.10/32 -d 100.110.120.30/32 -p tcp -m tcp --dport 9009 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.10/32 -d 100.110.120.20/32 -p tcp -m tcp --dport 9010 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.10/32 -d 100.110.120.30/32 -p tcp -m tcp --dport 9010 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 192.168.121.11/32 -d 192.168.121.12/32 -p tcp -m tcp --sport 2404 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -s 192.168.124.11/32 -d 192.168.124.12/32 -p tcp -m tcp --sport 2404 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -s 192.168.143.1/32 -d 192.168.143.2/32 -p tcp -m tcp --dport 502 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 192.168.143.1/32 -d 192.168.143.3/32 -p tcp -m tcp --dport 502 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 192.168.143.1/32 -d 192.168.143.4/32 -p tcp -m tcp --dport 502 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 192.168.144.1/32 -d 192.168.144.2/32 -p tcp -m tcp --dport 502 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 192.168.144.1/32 -d 192.168.144.3/32 -p tcp -m tcp --dport 502 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 192.168.144.1/32 -d 192.168.144.4/32 -p tcp -m tcp --dport 502 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 192.168.122.11/32 -d 192.168.122.12/32 -p tcp -m tcp --dport 502 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 192.168.123.11/32 -d 192.168.123.12/32 -p tcp -m tcp --dport 2404 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 198.122.0.110/32 -d 198.122.98.95/32 -p tcp -m tcp --dport 8800 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 192.168.121.11/32 -d 192.168.121.12/32 -p tcp -m tcp --sport 502 -m state --state ESTABLISHED -j ACCEPT 
COMMIT
# Completed on Sat Aug 10 13:18:21 2019
