fw_cfg/iptables_bak/workstation-iptables_20191212
# Generated by iptables-save v1.4.7 on Fri Mar 29 16:23:35 2019
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Fri Mar 29 16:23:35 2019
# Generated by iptables-save v1.4.7 on Fri Mar 29 16:23:35 2019
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Fri Mar 29 16:23:35 2019
# Generated by iptables-save v1.4.7 on Fri Mar 29 16:23:35 2019
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -s 100.110.120.10/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.20/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.30/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.50/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 8800 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.50/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 8801 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.20/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 9009 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.30/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 9009 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.20/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 8080 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.30/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 8080 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 197.167.17.17/32 -d 197.167.17.57/32 -p tcp -m tcp --sport 8081 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.100/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -s 100.110.120.100/32 -d 100.110.120.40/32 -p tcp -m tcp --sport 4200 -m state --state ESTABLISHED -j ACCEPT 
#-A INPUT -s 100.110.120.20/32 -d 100.110.120.40/32 -p tcp -m tcp -m state --state NEW,ESTABLISHED -j ACCEPT 
#-A INPUT -s 100.110.120.10/32 -d 100.110.120.40/32 -p tcp -m tcp -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.10/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.20/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.30/32 -p tcp -m tcp --sport 6801:6809 --dport 6801:6809 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.50/32 -p udp -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.50/32 -p tcp -m tcp --dport 8800 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.50/32 -p tcp -m tcp --dport 8801 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.20/32 -p tcp -m tcp --dport 9009 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.30/32 -p tcp -m tcp --dport 9009 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.20/32 -p tcp -m tcp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.30/32 -p tcp -m tcp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 197.167.17.57/32 -d 197.167.17.17/32 -p tcp -m tcp --dport 8081 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.100/32 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.100/32 -p tcp -m tcp --dport 4200 -m state --state NEW,ESTABLISHED -j ACCEPT 
#-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.20/32 -p tcp -m tcp -m state --state NEW,ESTABLISHED -j ACCEPT 
#-A OUTPUT -s 100.110.120.40/32 -d 100.110.120.10/32 -p tcp -m tcp -m state --state NEW,ESTABLISHED -j ACCEPT 
COMMIT
# Completed on Fri Mar 29 16:23:35 2019
